# orexcoin

./: COPYING  INSTALL  Makefile.am  README.md  archive.sh  bitcoin-qt.pro  configure.ac
contrib/debian/: changelog  control  orexcoin-qt.desktop  orexcoin-qt.install  orexcoin-qt.lintian-overrides  orexcoin-qt.protocol  orexcoin.examples  orexcoind.install  orexcoind.lintian-overrides  orexcoind.manpages  orexcoind.postinst  rules
contrib/debian/manpages/: orexcoin-qt.1  orexcoin.conf.5  orexcoind.1
contrib/gitian-descriptors/: deps-linux.yml  deps-osx.yml  deps-win.yml  deps-win32.yml  gitian-linux.yml  gitian-osx.yml  gitian-win.yml  gitian-win32.yml  gitian.yml  qt-osx.yml
contrib/gitian-docker/: README.md  setup.sh
contrib/macdeploy/: DS_Store  fancy.plist  macdeployqtplus
contrib/systemd/: orexcoind-tor@.service  orexcoind@.service
contrib/vagrant/: Vagrantfile  install.sh
contrib/vagrant/tor/: README.md  install.sh
doc/: README.md  README_windows.txt  build-osx.md  build-unix.md
scripts/: orexcoinconf.sh
scripts/docker/debian/: Dockerfile-jessie  Dockerfile-stretch
scripts/docker/windows-crosscompile/: Dockerfile-trusty  Dockerfile-wheezy  Dockerfile-xenial
scripts/windows-crosscompile/: dependencies.sh
share/: setup.nsi.in  setup64.nsi.in
share/pixmaps/: orexcoin128.xpm  orexcoin16.xpm  orexcoin256.xpm  orexcoin32.xpm  orexcoin64.xpm
share/qt/: Info.plist.in  make_windows_icon.sh
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.h  base58.h  bignum.h  bitcoin-cli.cpp  bitcoin-res.rc  bitcoind.cpp  bloom.cpp  bloom.h  checkpoints.cpp  checkpoints.h  checkpointsync.cpp  checkpointsync.h  checkqueue.h  clientversion.h  compat.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  kernel.cpp  kernel.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  main.cpp  (+43 more)
src/qt/: aboutdialog.cpp  addressbookpage.cpp  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoinunits.cpp  blockbrowser.cpp  coincontroldialog.cpp  editaddressdialog.cpp  guiutil.cpp  guiutil.h  multisigdialog.cpp  multisiginputentry.cpp  optionsdialog.cpp  paymentserver.cpp  qrcodedialog.cpp  rpcconsole.cpp  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  transactionrecord.cpp
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  multisigdialog.ui  optionsdialog.ui  overviewpage.ui  rpcconsole.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv_LV.ts  bitcoin_nb.ts  bitcoin_nl.ts  bitcoin_pl.ts  bitcoin_pt_BR.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_ru.ts  bitcoin_sk.ts  (+7 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: orexcoin.icns
src/qt/res/themes/: default.qss
src/qt/test/: uritests.cpp
src/test/: compress_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  test_bitcoin.cpp  util_tests.cpp
src/test/containers/: README.md  attach  build_base  build_net  build_seed  check_net_can_mint  coin_container.rb  make  node  remove_acunar_containers  show_log
src/test/data/: tx_invalid.json  tx_valid.json
src/test/features/step_definitions/: common.rb
